--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <div class="dev-banner" *ngIf="!prod">
+    Development Build
+  </div>
+  <ion-router-outlet [ngClass]="prod ? '' : 'dev-router'"></ion-router-outlet>
 </ion-app>
