--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -23,17 +23,18 @@
         Reset All
       </ion-button>
     </div>
-    <ng-container *ngFor="let obj of speciesClass">
+    <ng-container *ngFor="let obj of speciesClass; let i = index">
       <ion-item-divider no-padding mode="ios" sticky style="background-color: gray; color: white; height: 40px;" (click)="toggleClass(obj)">
-          <ion-button class="ion-no-padding" slot="start" fill="clear" size="small" color="light">
-              <ion-icon slot="icon-only" size="large" [attr.name]="!obj.expanded ? 'add' : 'remove'" mode="ios"></ion-icon>
-          </ion-button>
-          {{ obj.className }}
-          <ion-chip slot="end">
-            <ion-label color="light">
-              {{ obj.found }} / {{ obj.species.length }}
-            </ion-label>
-          </ion-chip>
+        <div style="width: 100%; height: 2px; background-color: black; position: absolute; top: 0; left: 0;" *ngIf="i > 0"></div>
+        <ion-button class="ion-no-padding" slot="start" fill="clear" size="small" color="light">
+            <ion-icon slot="icon-only" size="large" [attr.name]="!obj.expanded ? 'add' : 'remove'" mode="ios"></ion-icon>
+        </ion-button>
+        {{ obj.className }}
+        <ion-chip slot="end">
+          <ion-label color="light">
+            {{ obj.found }} / {{ obj.species.length }}
+          </ion-label>
+        </ion-chip>
       </ion-item-divider>
       <ng-container *ngFor="let letter of alphabet">
         <ion-item-group *ngIf="obj.expanded && (obj.species | filterSpeciesByNameStartsWith : letter)">
