Modal styling updates to allow for transparency. Started implementing some of the small, suggested changes from midterm presentations.

--- a/src/app/pages/checklist/checklist.page.html
+++ b/src/app/pages/checklist/checklist.page.html
@@ -1,11 +1,11 @@
 <tc-header [pageName]="'Species Checklist'"></tc-header>
 
 <ion-content>
-  <ion-header translucent>
+  <!-- <ion-header translucent>
     <ion-toolbar>
       <ion-title>Species Checklist</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
   <div style="padding-top: 10px; margin: auto; width: 100%; display: flex; justify-content: center;">
     <ion-chip color="primary" style="text-align: center;">
       <ion-label>
