--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,18 +1,4 @@
-
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-buttons slot="secondary">
-        <ion-button routerLink="/info">
-            <ion-icon name="information-circle" slot="icon-only" name="information-circle"></ion-icon>
-        </ion-button>
-    </ion-buttons>
-    <ion-title>
-        <!-- <img src="assets/img/whiteturtle.png" width="40px" style="display:inline-block" height="40px"/> -->
-        <!-- <ion-icon name="paw"></ion-icon> -->
-      Turtle Cove
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<tc-header pageName="Turtle Cove"></tc-header>
 
 <ion-content>
   <ion-grid>
