--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -1,11 +1,13 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-back-button defaultHref="tabs/home"></ion-back-button>
     </ion-buttons>
     <ion-title>Info</ion-title>
   </ion-toolbar>
-</ion-header>
+</!--> 
+
+<tc-header pageName="About"></tc-header>
 
 <ion-content>
   <ion-card>
