--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -1,11 +1,11 @@
-<tc-header [pageName]="'Turtle Tour'"></tc-header>
+<tc-header pageName="Boardwalk Tour"></tc-header>
 
 <ion-content>
-    <ion-header translucent>
+    <!-- <ion-header translucent>
         <ion-toolbar>
             <ion-title>Boardwalk Tour</ion-title>
         </ion-toolbar>
-    </ion-header>
+    </ion-header> -->
     <div style="padding-top: 10px; margin: auto; width: 100%; display: flex; justify-content: center;">
         <ion-chip color="primary" style="text-align: center;">
             <ion-label>
