--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -3,6 +3,7 @@
     <ion-title>
         <!-- <img src="assets/img/whiteturtle.png" width="40px" style="display:inline-block" height="40px"/> -->
         <!-- <ion-icon name="paw"></ion-icon> -->
-      Turtle Cove</ion-title>
+      {{pageName}}
+    </ion-title>
   </ion-toolbar>
 </ion-header>
