--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,7 @@ ion-card {
     color : var(--ion-color-secondary);
     --color-selected: var(--ion-color-secondary);
  }
+
+ .modal-wrapper {
+    background: transparent !important;
+ }
