--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -16,5 +16,9 @@
       <ion-icon name="checkmark"></ion-icon>
       <ion-label>Checklist</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="about">
+      <ion-icon name="information-circle"></ion-icon>
+      <ion-label>About</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
