--- a/src/app/pages/checklist/modal/modal.component.html
+++ b/src/app/pages/checklist/modal/modal.component.html
@@ -8,5 +8,8 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<div style="text-align: center; width: 100%;">{{ species.nomenclature }}</div>
-<img class="species-img" [src]="species.image" />
+
+<ion-content>
+  <div style="text-align: center; width: 100%;">{{ species.nomenclature }}</div>
+  <img class="species-img" [src]="species.image" />
+</ion-content>
