Moved zoom and added map to About Page

--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -10,6 +10,10 @@
 <tc-header pageName="About"></tc-header>
 
 <ion-content>
+
+  <ion-card>
+      <img src="assets/img/tcMap.jpg"/>
+  </ion-card>
   <ion-card>
     <ion-card-header>
       <ion-card-title (onclick)="toggleExpanded()">
