Minor Zoom component fix

--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -29,14 +29,15 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-slides [options]="sliderOptions" #slider>
-        <ion-slide>
-          <div class="swiper-zoom-container">
-            <img [src]="image" />
-          </div>
-        </ion-slide>
-      </ion-slides>
-      <ion-row> </ion-row>
+      <ion-row>
+        <ion-slides [options]="sliderOptions" #slider>
+          <ion-slide>
+            <div class="swiper-zoom-container">
+              <img [src]="image" />
+            </div>
+          </ion-slide>
+        </ion-slides>
+      </ion-row>
     </ion-grid>
   </div>
 </ion-content>
