Fixed weird zoom behavior on zoom page

--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -9,35 +9,27 @@
 </ion-header>
 
 <ion-content fullscreen>
-  <div style="position: relative; height: 100%;">
-    <ion-grid
-      style="position: absolute; top: 40%; transform: translateY(-50%);"
-    >
-      <ion-row>
-        <ion-col>
-          <div
-            style="width: 20%; display: flex; justify-content: space-around; margin: auto;"
-          >
-            <ion-button (click)="zoom(true)" fill="clear" color="light">
-              <ion-icon name="add" slot="start"></ion-icon>
-              In
-            </ion-button>
-            <ion-button (click)="zoom(false)" fill="clear" color="light">
-              <ion-icon name="remove" slot="start"></ion-icon>
-              Out
-            </ion-button>
-          </div>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-slides [options]="sliderOptions" #slider>
-          <ion-slide>
-            <div class="swiper-zoom-container">
-              <img [src]="image" />
-            </div>
-          </ion-slide>
-        </ion-slides>
-      </ion-row>
-    </ion-grid>
+
+  <div class="zoom-buttons">
+
+    <ion-button (click)="zoom(true)" fill="clear" color="light">
+      <ion-icon name="add" slot="start"></ion-icon>
+      In
+    </ion-button>
+
+    <ion-button (click)="zoom(false)" fill="clear" color="light">
+      <ion-icon name="remove" slot="start"></ion-icon>
+      Out
+    </ion-button>
+
   </div>
+
+  <ion-slides style="height: 100%;" [options]="sliderOptions" #slider>
+    <ion-slide>
+      <div class="swiper-zoom-container">
+        <img style="margin-bottom: 400px;" [src]="image" />
+      </div>
+    </ion-slide>
+  </ion-slides>
+  
 </ion-content>
