--- a/src/app/shared/zoom/zoom.component.scss
+++ b/src/app/shared/zoom/zoom.component.scss
@@ -1,16 +1,23 @@
 ion-button {
-    --background: transparent;
-    ion-icon {
-        font-size: 2rem;
-    }
-    padding: 0;
-    margin: 0;
+  --background: transparent;
+  ion-icon {
+    font-size: 2rem;
+  }
+  padding: 0;
+  margin: 0;
 }
 
 ion-content {
-    --background: rgba(44, 39, 45, 0.84);
+  --background: rgba(44, 39, 45, 0.84);
 }
 
 ion-slides {
-    height: 80%;
+  height: 80%;
+}
+
+.zoom-buttons {
+  width: 20%;
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
 }
