Added icons to events and troubled waters buttons.

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -26,10 +26,12 @@
       <ion-col>
         <div style="display: flex; flex-direction: row;">
           <ion-button routerLink="/events">
-            Events
+            <ion-icon name="calendar"></ion-icon>
+            <span>Events</span>
           </ion-button>
           <ion-button (click)="openUrl('https://www.youtube-nocookie.com/embed/iqhW54bWwnw')">
-            Troubled Waters
+            <ion-icon name="film"></ion-icon>
+            <span>Troubled Waters</span>
           </ion-button>
       </div>
       </ion-col>
