--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,5 +1,12 @@
 ion-button {
-    flex-grow: 1;
-    flex-basis: 50%;
-    padding: 2px;
+  flex-grow: 1;
+  flex-basis: 50%;
+  padding: 2px;
+  * {
+    vertical-align: middle;
+    display: inline-block;
+  }
+  ion-icon {
+    padding-right: 0.5em;
+  }
 }
