--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -8,7 +8,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen>
+<ion-content fullscreen scrollY="false">
 
   <div class="zoom-buttons">
 
