--- a/src/app/shared/zoom/zoom.component.scss
+++ b/src/app/shared/zoom/zoom.component.scss
@@ -1,3 +1,7 @@
+ion-toolbar {
+  --background: transparent;
+}
+
 ion-button {
   --background: transparent;
   ion-icon {
@@ -16,7 +20,6 @@ ion-slides {
 }
 
 .zoom-buttons {
-  width: 20%;
   display: flex;
   justify-content: space-around;
   margin: auto;
