--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -1,36 +1,38 @@
 <tc-header pageName="Boardwalk Tour"></tc-header>
 
 <ion-content>
-    <!-- <ion-header translucent>
-        <ion-toolbar>
-            <ion-title>Boardwalk Tour</ion-title>
-        </ion-toolbar>
-    </ion-header> -->
-    <div style="padding-top: 10px; margin: auto; width: 100%; display: flex; justify-content: center;">
-        <ion-chip color="primary" style="text-align: center;">
-            <ion-label>
-            {{ totalFound }} / {{ total }} Signs Viewed
-            </ion-label>
-        </ion-chip>
-    </div>
-    <ion-grid>
-        <ion-row>  
-            <ion-col size="4" *ngFor="let obj of signs;">
-                <div style="display: flex; flex-direction: row;">
-                    <ion-button size="large" (click)="showModal(obj)" [color]="getColor(obj.viewed)">
-                        <ion-label>{{ obj.name }}</ion-label>
-                    </ion-button>
-                </div>
-            </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-                <div style="display: flex; flex-direction: row;">
-                    <ion-button color="secondary" size="large" (click)="reset()">
-                        Reset All
-                    </ion-button>
-                </div>
-            </ion-col>
-        </ion-row>
-    </ion-grid>
+  <div
+    style="padding-top: 10px; margin: auto; width: 100%; display: flex; justify-content: center;"
+  >
+    <ion-chip color="primary" style="text-align: center;">
+      <ion-label> {{ totalFound }} / {{ total }} Signs Viewed </ion-label>
+    </ion-chip>
+  </div>
+  <ion-grid>
+    <ion-row>
+      <!-- <ion-col size="4" *ngFor="let obj of signs">
+        <div class="sign-button-unviewed" (click)="showModal(obj)">
+          <img src="assets/img/signs/{{ obj.id }}"/>
+          <div></div>
+          <ion-label>{{ obj.id + 1 }}</ion-label>
+        </div>
+      </ion-col> -->
+      <ion-col size="4" *ngFor="let obj of totalArray; let i = index">
+        <div [class]="'sign-button ' + (obj.viewed ? 'viewed' : 'unviewed')" (click)="showZoom(i)">
+          <img src="assets/img/signs/{{ i }}"/>
+          <div></div>
+          <ion-label>{{ i + 1 }}</ion-label>
+        </div>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+        <div style="display: flex; flex-direction: row;">
+          <ion-button color="secondary" (click)="newReset()">
+            Reset All
+          </ion-button>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
