--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header no-border>
   <ion-toolbar>
     <ion-buttons slot="primary">
       <ion-button (click)="close()" color="light">
@@ -12,7 +12,7 @@
   <ion-slides style="height: 100%;" [options]="sliderOptions" #slider>
     <ion-slide>
       <div class="swiper-zoom-container">
-        <img [src]="image" />
+        <img [src]="image || ('assets/img/signs/' + imgId)" />
       </div>
     </ion-slide>
   </ion-slides>
