--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -11,8 +11,8 @@
 
 <ion-content>
 
-  <ion-card>
-      <img src="assets/img/tcMap.jpg"/>
+  <ion-card href="https://goo.gl/maps/mqcqMtYzFSaTokYRA">
+    <img src="assets/img/tcMap.jpg"/>
   </ion-card>
   <ion-card>
     <ion-card-header>
