--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -11,7 +11,7 @@
 
 <ion-content>
 
-  <ion-card href="https://goo.gl/maps/mqcqMtYzFSaTokYRA">
+  <ion-card href="https://goo.gl/maps/mqcqMtYzFSaTokYRA" target="_blank">
     <img src="assets/img/tcMap.jpg"/>
   </ion-card>
   <ion-card>
