--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -10,9 +10,9 @@
 
 <ion-content fullscreen scrollY="false">
   <ion-slides style="height: 100%;" [options]="sliderOptions" #slider>
-    <ion-slide>
+    <ion-slide *ngFor="let path of paths">
       <div class="swiper-zoom-container">
-        <img [src]="image || ('assets/img/signs/' + imgId)" />
+        <img [src]="path" />
       </div>
     </ion-slide>
   </ion-slides>
