--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -9,10 +9,10 @@
 </ion-header>
 
 <ion-content fullscreen scrollY="false">
-  <ion-slides style="height: 100%;" [options]="sliderOptions" #slider>
-    <ion-slide>
+  <ion-slides style="height: 100%;" [options]="sliderOptions" #slider (ionSlideDidChange)="slideChanged()">
+    <ion-slide *ngFor="let obj of imgService.signs; let i = index">
       <div class="swiper-zoom-container">
-        <img [src]="image || ('assets/img/signs/' + imgId)" />
+        <img [src]="'assets/img/signs/' + i" />
       </div>
     </ion-slide>
   </ion-slides>
