--- a/src/app/pages/gw-tour/gw-tour.page.html
+++ b/src/app/pages/gw-tour/gw-tour.page.html
@@ -44,11 +44,11 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button>
+          <ion-button >
             <ion-icon name="car"></ion-icon>
             <span>Take the Tour</span>
-          </ion-button>
-          <ion-button color='secondary'>
+          </ion-button >
+          <ion-button color='secondary' routerLink="/gw-stops">
             <ion-icon name="pin"></ion-icon>
             <span>View Stops</span>
           </ion-button>
