Added confirmation dialog to reset button on the TC Tour page.

--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -28,7 +28,7 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button color="secondary" (click)="imgService.reset()">
+          <ion-button color="secondary" (click)="reset()">
             Reset All
           </ion-button>
         </div>
