Made tc tour buttons' drop shadow a little darker.

--- a/src/app/pages/tc-tour/tc-tour.page.scss
+++ b/src/app/pages/tc-tour/tc-tour.page.scss
@@ -41,7 +41,7 @@ ion-button {
 }
 
 .unviewed {
-    box-shadow: 2px 4px 8px grey;
+    box-shadow: 2px 4px 8px dimgray;
     div {
         background-color: rgba(0, 0, 0, 0);
     }
