--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -17,7 +17,7 @@
           <ion-label>{{ obj.id + 1 }}</ion-label>
         </div>
       </ion-col> -->
-      <ion-col size="4" *ngFor="let obj of imgService.signs; let i = index">
+      <ion-col size="4" *ngFor="let obj of imgService.images; let i = index">
         <div [class]="'sign-button ' + (obj.viewed ? 'viewed' : 'unviewed')" (click)="showZoom(i)">
           <img src="assets/img/signs/{{ i }}"/>
           <div></div>
