--- a/src/app/pages/tc-tour/tc-tour.page.html
+++ b/src/app/pages/tc-tour/tc-tour.page.html
@@ -19,7 +19,7 @@
       </ion-col> -->
       <ion-col size="4" *ngFor="let obj of imgService.images; let i = index">
         <div [class]="'sign-button ' + (obj.viewed ? 'viewed' : 'unviewed')" (click)="showZoom(i)">
-          <img src="assets/img/signs/{{ i }}"/>
+          <img [src]="obj.path"/>
           <div></div>
           <ion-label>{{ i + 1 }}</ion-label>
         </div>
