Removed "Hey Girl" button

--- a/src/app/pages/gw-stops/gw-stops.page.html
+++ b/src/app/pages/gw-stops/gw-stops.page.html
@@ -11,9 +11,9 @@
     <ion-row>
       <ion-col>
         <div style="display: flex; flex-direction: row;">
-          <ion-button color="primary">
+          <!-- <ion-button color="primary">
             Hey girl, how you doin?
-          </ion-button>
+          </ion-button> -->
         </div>
       </ion-col>
     </ion-row>
