--- a/src/app/pages/info/info.page.html
+++ b/src/app/pages/info/info.page.html
@@ -110,5 +110,5 @@
       Cell: (504)231-1067
     </ion-card-content>
   </ion-card>
-  <div style="text-align: center; width: 100%; color: gray; padding-top: 1%; padding-bottom: 2%;">Turtle icon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  <div style="text-align: center; width: 100%; color: gray; padding-bottom: 1%;">Turtle icon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 </ion-content>
