--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,33 +2,64 @@
   <div id="prompt-container" class="prompt-container">
     <div class="shade">
     </div>
-    <ion-slides class="slides">
-      <ion-slide>
-        <div class="slide">
-          Slide 1
-        </div>
-      </ion-slide>
-      <ion-slide>
-        <div class="slide">
-          Slide 2
-        </div>
-      </ion-slide>
-      <ion-slide>
-        <div class="slide">
-          Slide 3
-        </div>
-      </ion-slide>
-      <ion-slide>
-        <div class="slide">
-          Slide 4
-        </div>
-      </ion-slide>
-      <ion-slide>
-        <div class="slide">
-          Slide 5
-        </div>
-      </ion-slide>
-    </ion-slides>
+    <ng-container *ngIf="platform.is('android')">
+      <ion-slides pager="true" class="slides">
+        <ion-slide>
+          <div class="slide">
+            Android slide 1
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            Android slide 2
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            Android slide 3
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            Android slide 4
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            Android slide 5
+          </div>
+        </ion-slide>
+      </ion-slides>
+    </ng-container>
+    <ng-container *ngIf="platform.is('ios')">
+      <ion-slides class="slides">
+        <ion-slide>
+          <div class="slide">
+            iOS slide 1
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            iOS slide 2
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            iOS slide 3
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            iOS slide 4
+          </div>
+        </ion-slide>
+        <ion-slide>
+          <div class="slide">
+            iOS slide 5
+          </div>
+        </ion-slide>
+      </ion-slides>
+    </ng-container>
   </div>
   <div class="dev-banner" *ngIf="!prod">
     Development Build
