showModal method ACTUALLY called

--- a/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop/gw-stop.component.html
@@ -1,7 +1,7 @@
 <ion-header>
-    <ion-title>{{stop.title}}</ion-title>
+    <ion-title>Hello there</ion-title>
 </ion-header>
 
 <ion-card>
-   {{stop.info}}
+   hello there
 </ion-card>
