Updated modal transparency handline.

--- a/src/app/shared/zoom/zoom.component.html
+++ b/src/app/shared/zoom/zoom.component.html
@@ -18,7 +18,7 @@
   </ion-slides>
 </ion-content>
 
-<ion-footer>
+<ion-footer no-border>
   <ion-toolbar>
     <div class="zoom-buttons">
       <ion-button (click)="zoom(true)" fill="clear" color="light">
