--- a/src/global.scss
+++ b/src/global.scss
@@ -11,22 +11,24 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 body {
-   background-color: var(--ion-color-primary);
+  background-color: var(--ion-color-primary);
 }
 
 ion-content {
-    --background: #eeeeee;
+  --background: #eeeeee;
 }
 
 ion-card {
-   --background: #ffffff !important;
+  --background: #ffffff !important;
 }
 
- .tab-selected {
-    color : var(--ion-color-secondary);
-    --color-selected: var(--ion-color-secondary);
- }
+.tab-selected {
+  color: var(--ion-color-secondary);
+  --color-selected: var(--ion-color-secondary);
+}
 
- .modal-wrapper {
+.transparent-modal {
+  div.modal-wrapper {
     background: transparent !important;
- }
+  }
+}
