--- a/src/app/pages/gw-tour/gw-stops/gw-stop-viewer/gw-stop-viewer.component.html
+++ b/src/app/pages/gw-tour/gw-stops/gw-stop-viewer/gw-stop-viewer.component.html
@@ -1,3 +1,18 @@
-<p>
-  gw-stop-viewer works!
-</p>
+<ion-header no-border>
+    <ion-toolbar>
+      <ion-buttons slot="primary">
+        <ion-button (click)="close()" color="light">
+          <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content fullscreen scrollY="false">
+    <ion-slides style="height: 100%;" [options]="sliderOptions" #slider (ionSlideDidChange)="slideChanged()">
+      <ion-slide >
+        <div class="swiper-zoom-container">
+        </div>
+      </ion-slide>
+    </ion-slides>
+  </ion-content>
